# Mangakekw

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  README.old.md  bm.yml  package-lock.json  package.json  rust-toolchain.toml
api/: Cargo.toml
api/example_responses/: chapter_retrieve  cover_retrieve  get_author  get_chapter  get_cover  get_manga  search_manga
api/src/: error_catchers.rs  lib.rs  main.rs  routes.rs  tests.rs  utils.rs
dex/: Cargo.toml
dex/example_responses/chapter/: 1.txt
dex/example_responses/cover/: 1.txt
dex/example_responses/creator/: chugong.txt  fuse.txt  murata.txt
dex/example_responses/error/: 1.txt
dex/example_responses/manga/: opm.txt  slime.txt  solo.txt
dex/src/: lib.rs
dex/src/chapter/: mod.rs  request.rs  tests.rs
dex/src/chapter_list/: mod.rs  parser.rs  request.rs
dex/src/cover/: mod.rs  request.rs
dex/src/cover_list/: mod.rs  parser.rs  request.rs
dex/src/creator/: mod.rs  parser.rs  request.rs  tests.rs
dex/src/creator_list/: mod.rs  parser.rs  request.rs
dex/src/dexrequest/: author.rs  chapter.rs  cover.rs  mod.rs
dex/src/dexwrapper/: mod.rs
dex/src/dexwrapper/chapter/: mod.rs  parser.rs
dex/src/dexwrapper/chapter_list/: mod.rs
dex/src/dexwrapper/cover/: mod.rs  parser.rs
dex/src/dexwrapper/cover_list/: mod.rs  parser.rs
dex/src/dexwrapper/creator/: mod.rs  parser.rs
dex/src/dexwrapper/creator_list/: mod.rs  (+1 more)
dex/src/error/: parser.rs
dex/src/manga/: mod.rs  request.rs  tests.rs
dex/src/manga_list/: mod.rs  parser.rs  request.rs
dex/src/request/: author.rs  chapter.rs  cover.rs  manga.rs  mod.rs  utils.rs
dex/src/utils/: mod.rs
dex/src/wrapper/: mod.rs
(+73 files in other folders)
