[package]
name = "Mangakekw"
version = "0.1.0"
authors = ["0Mayank <1mayanktomar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
chrono = { version="0.4", features= ["serde"] }